# masterThesis

./: .gitignore  CMakeLists.txt  CrossSectionsAssistant.cpp  CrossSectionsAssistant.h  DataBaseCrossSectionsManager.h  DataBaseLineLoadsManager.cpp  DataBaseLineLoadsManager.h  DataBaseLinesManager.cpp  DataBaseLinesManager.h  DataBaseMaterialsManager.cpp  DataBaseMaterialsManager.h  DataBaseModelObjectsManager.cpp  DataBaseModelObjectsManager.h  DataBaseNodalLoadsManager.cpp  DataBaseNodalLoadsManager.h  DataBasePointsManager.cpp  DataBasePointsManager.h  DataBaseStarter.cpp  DataBaseStarter.h  DataBaseSupportsManager.cpp  DataBaseSupportsManager.h  DateBaseCrossSectionsManager.cpp  DateBaseStarter.cpp  DateBaseStarter.h  DeleteLineLoadsLayout.ui  DeleteNodalLoadsLayout.ui  EditLineLoadsLayout.ui  EditNodalLoadsLayout.ui  FreeFemExecutor.cpp  FreeFemExecutor.h  MatrixAggregator.cpp  MatrixAggregator.h  README.md  RodsHandler.cpp  RodsHandler.h  SlabDeleteLineSupportLayout.ui  SlabDeleteSurfaceLayout.ui  TableTypes.h  addboundariesdialog.cpp  addboundariesdialog.h  (+62 more)
DataBaseManagers/: DataBaseCircularLinesManager.cpp  DataBaseCircularLinesManager.h  DataBaseCrossSectionsManager.h  DataBaseFreeFEMPreparer.cpp  DataBaseFreeFEMPreparer.h  DataBaseLineLoadsManager.cpp  DataBaseLineLoadsManager.h  DataBaseLineSupportsManager.cpp  DataBaseLineSupportsManager.h  DataBaseLinesManager.cpp  DataBaseLinesManager.h  DataBaseManagers.h  DataBaseMaterialsManager.cpp  DataBaseMaterialsManager.h  DataBaseMeshManager.cpp  DataBaseMeshManager.h  DataBaseModelObjectsManager.cpp  DataBaseModelObjectsManager.h  DataBaseNodalLoadsManager.cpp  DataBaseNodalLoadsManager.h  DataBasePointsManager.cpp  DataBasePointsManager.h  DataBaseResultsManager.cpp  DataBaseResultsManager.h  DataBaseSlabLineLoadsManager.cpp  DataBaseSlabLineLoadsManager.h  DataBaseSlabMeshManager.cpp  DataBaseSlabMeshManager.h  DataBaseSlabPointLoadManager.cpp  DataBaseSlabPointLoadManager.h  DataBaseStarter.cpp  DataBaseStarter.h  DataBaseSupportsManager.cpp  DataBaseSupportsManager.h  DataBaseSurfaceLoadsManager.cpp  DataBaseSurfaceLoadsManager.h  DataBaseSurfaceSupportManager.cpp  DataBaseSurfaceSupportManager.h  DataBaseSurfaceSupportsManager.cpp  DataBaseSurfaceSupportsManager.h  (+6 more)
GUI/: StartWindow.cpp  StartWindow.h  StartWindow.ui  ViewDialog.cpp  ViewDialog.h  ViewDialog.ui  addboundariesdialog.cpp  addboundariesdialog.h  addboundariesdialog.ui  addcrosssectiondialog.cpp  addcrosssectiondialog.h  addcrosssectiondialog.ui  addlinedialog.cpp  addlinedialog.h  addlinedialog.ui  addlineloaddialog.cpp  addlineloaddialog.h  addlineloaddialog.ui  addmaterialdialog.cpp  addmaterialdialog.h  addpointappliedforce.cpp  addpointappliedforce.h  addpointdialog.cpp  addpointdialog.h  basedialog.cpp  basedialog.h  deleteobjectdialog.cpp  deleteobjectdialog.h  deleteobjectdialog.ui  editobjectdialog.cpp  editobjectdialog.h  editobjectdialog.ui  gui.cpp  gui.h  gui.ui  setpropertiesdialog.cpp  setpropertiesdialog.h
SlabGUI/: AddSlabLineLoadDialog.cpp  AddSlabLineLoadDialog.h  AddSlabLineLoadDialog.ui  AddSlabPointLoadDialog.cpp  AddSlabPointLoadDialog.h  AddSlabPointLoadDialog.ui  AddSlabSupportsDialog.cpp  AddSlabSupportsDialog.h  AddSlabSupportsDialog.ui  AddSurfaceDialog.cpp  AddSurfaceDialog.h  AddSurfaceDialog.ui  AddSurfaceLoadDialog.cpp  AddSurfaceLoadDialog.h  AddSurfaceLoadDialog.ui  AddSurfaceSupportDialog.cpp  AddSurfaceSupportDialog.h  AddSurfaceSupportDialog.ui  SlabBaseDialog.cpp  SlabBaseDialog.h  SlabBaseDialog.ui  SlabDeleteObjectDialog.cpp  SlabDeleteObjectDialog.h  SlabDeleteObjectDialog.ui  SlabGUI.cpp  SlabGUI.h  SlabGUI.ui  slabSetPropertiesDialog.cpp  slabSetPropertiesDialog.h  slabSetPropertiesDialog.ui
Solver/: MemberSupportConditions.h  UniformLoad.cpp  UniformLoad.h  matrixoperations.cpp  matrixoperations.h  member.cpp  member.h  membersupportconditions.cpp  node.cpp  node.h  nodeload.cpp  nodeload.h  nodesupport.cpp  nodesupport.h  solver.cpp  solver.h
sqlite/sqliteSTUDIO/SQLiteStudio/: SQLiteStudio.exe - Shortcut.lnk
